tweak on PinnedTopSite Icon to avoid overflow
Fix #6281

Auditors: @luixxiul

Test Plan:

* Go to about:newtab
* Pin a site
* Pinned icon should not be overflown by favicon (should be aesthetically correct)

--- a/less/about/newtab.less
+++ b/less/about/newtab.less
@@ -275,6 +275,7 @@ ul {
           }
 
           .pinnedTopSite {
+            transition: @transitionFast;
             opacity: 1;
             visibility: visible;
             position: absolute;
@@ -287,6 +288,7 @@ ul {
             display: flex;
             align-items: center;
             justify-content: center;
+            z-index: 2;
 
             .pin {
               font-size: 10px;
